[package]
name = "iwmenu"
version = "0.4.0"
edition = "2018"
description = "Launcher-driven Wi-Fi manager for Linux"
authors = ["e-tho"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/e-tho/iwmenu"
repository = "https://github.com/e-tho/iwmenu"

[dependencies]
iwdrs = "0.2"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await",
] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["process", "signal"] }
libc = "0.2"
process-wrap = { version = "9", features = ["std"] }
signal-hook = "0.4"
notify-rust = "4"
shlex = "1.3"
rust-i18n = "3"
sys-locale = "0.3"

[profile.release]
strip = true
lto = true
